Fixed alignment of home cards buttons reported on issue #22

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -786,7 +786,7 @@ footer ul {
 
   /*card*/
   .card-text {
-    min-height: auto;
+    min-height: 207px;
   }
 
   /* equal space for sections*/
